# bwenv

./: .gitignore  Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
src/: main.rs
src/bitwarden/: client.rs  models.rs
src/commands/: config_cmd.rs  export.rs  generate.rs  list.rs  mod.rs  switch.rs
src/config/: mod.rs  models.rs  rules.rs
src/parser/: detector.rs  env_gen.rs  mod.rs
