[package]
name = "bwenv"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/itzhang89/bwenv"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
anyhow = "1"
dialoguer = "0.11"
dirs = "5"
